--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -2,7 +2,7 @@
 
 {% block title %}My Blog{% endblock %}
 {% block content %}
-<h1>My Blog</h1>
+<h1>Blog Entries</h1>
 {% for post in posts %}
 <h2>
     <a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a>
