--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -5,7 +5,7 @@
 <h1>Blog Entries</h1>
 {% for post in posts %}
 <h2>
-    <a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a>
+    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
 </h2>
 <p class="date">published {{ post.publish }} by {{ post.author }}</p>
 {{ post.body | truncatewords:30 | linebreaks }}
