--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -2,12 +2,13 @@
 
 {% block title %}My Blog{% endblock %}
 {% block content %}
-<h1>Blog Entries</h1>
-{% for post in posts %}
-<h2>
-    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-</h2>
-<p class="date">published {{ post.publish }} by {{ post.author }}</p>
-{{ post.body | truncatewords:30 | linebreaks }}
-{% endfor %}
+    <h1>Blog Entries</h1>
+    {% for post in posts %}
+    <h2>
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+    </h2>
+    <p class="date">published {{ post.publish }} by {{ post.author }}</p>
+    {{ post.body | truncatewords:30 | linebreaks }}
+    {% endfor %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
